--- a/JoeKubert/JoeKubert.html
+++ b/JoeKubert/JoeKubert.html
@@ -30,6 +30,8 @@
 <div class="mySlides" style="text-align: center;"><img src="JoeKubert10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JoeKubert11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="JoeKubert12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoeKubert13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JoeKubert14.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -44,6 +46,130 @@ Kubert served as DC Comics' director of publications from 1967 to 1976.
 The Joe Kubert School of Cartoon and Graphic Art was founded in September 1976 by Kubert and his wife Muriel in Dover, New Jersey's former high school, whose tall windows offered optimal lighting. Its first graduating class of 1978 included Stephen R. Bissette, Thomas Yeates, and Rick Veitch. Kubert taught a number of students who later became notable professionals, including Amanda Conner, Eric Shanower, Steve Lieber, and Scott Kolins.
 </p><p>
 Kubert was inducted into the Harvey Awards' Jack Kirby Hall of Fame in 1997, and the Will Eisner Comic Book Hall of Fame in 1998. 
+</p><p>
+Titles
+</p><p>
+DC Comics
+</p><p>
+<li>9-11: The World's Finest Comic Book Writers &amp; Artists Tell Stories to Remember (2002)
+<li>Action Comics (1943)
+<li>Action Comics Annual #10 (2007)
+<li>All-American Comics #70 (1946)
+<li>All-American Men of War (1955)
+<li>All-American Western #103-116, 121, 125 (1948)
+<li>All Star Comics #21, 24-30, 33-37, 56-57 (1944)
+<li>Atom and Hawkman #40-41 (1968–1969)
+<li>Batman #400 (1986)
+<li>Batman Black and White #1 (1996)
+<li>Before Watchmen: Nite Owl #1-3  (2012)
+<li>Big All-American Comic Book #1 (1944)
+<li>The Brave and the Bold #1-24 (1955)
+<li>Captain Storm (1964)
+<li>Storm (1964)
+<li>DC Comics Presents  (1984)
+<li>DC Special #5 (1969)
+<li>DC Universe: Last Will and Testament (2008)
+<li>DC Universe: Legacies (2010)
+<li>Detective Comics (1981)
+<li>Dong Xoai, Vietnam 1965 (2010)
+<li>Flash Comics (1945)
+<li>From Beyond the Unknown (cover)(1971)
+<li>Frontier Fighters #1-8 (1955)
+<li>Ghosts vol. 2 #1 (2012)
+<li>G.I. Combat (1957)
+<li>Heroes Against Hunger #1 (among other artists) (1986)
+<li>House of Mystery #96 (1960)
+<li>House of Secrets #29-30, 39 (1960)
+<li>Jew Gangster SC (2011)
+<li>Jimmy Wakely (1950)
+<li>Joe Kubert Presents (2012)
+<li>Just Imagine Stan Lee with Joe Kubert Creating Batman (2001)
+<li>Justice League of America  (1982)
+<li>Korak, Son of Tarzan (1972)
+<li>Leading Comics (1943)
+<li>More Fun Comics (1944)
+<li>Mystery in Space (1956)
+<li>Our Army at War (1955)
+<li>Our Fighting Forces (1955)
+<li>Ragman (1977)
+<li>Sea Devils (1963)
+<li>Sensation Comics (1944)
+<li>Sgt. Rock (1977)
+<li>Sgt. Rock Special  (1992)
+<li>Sgt. Rock: Between Hell and a Hard Place (2003)
+<li>Sgt. Rock: The Prophecy (2006)
+<li>Showcase (1956)
+<li>Star-Spangled Comics (1945)
+<li>Star Spangled War Stories (1955)
+<li>Strange Adventures #55 (1955)
+<li>Tarzan (1972)
+<li>Tomahawk (1969)
+<li>Tor vol. 2 (1975)
+<li>Tor vol. 4 (2008)
+<li>Wednesday Comics (2009)
+<li>Weird War Tales (1971)
+<li>World's Finest Comics (1949)
+<li>Yossel SC (2011)
+<li>Young All-Stars Annual #1 (1988)
+</p><p>
+Marvel Comics
+</p><p>
+<li>Abraham Stone #1-2 (1995)
+<li>Apache Kid #13 (1955)
+<li>Battle #37, 41 (1955)
+<li>Best Love #33 (1949)
+<li>Ghost Rider #28-31 (inker) (1992)
+<li>Ghost Rider/Blaze: Spirits of Vengeance (1992)
+<li>Girl Comics #2 (inker) (1950)
+<li>Joe Kubert's Tor #1-4 (1993)
+<li>Journey into Mystery #21 (1955)
+<li>Journey into Unknown Worlds #34 (1955)
+<li>Kid Colt Outlaw #48 (1955)
+<li>Loveland #2 (inker) (1950)
+<li>Lovers #25, 30 (1949–1950)
+<li>Marines in Battle #7-8 (1955)
+<li>Marvel Tales #122, 134 (1954–1955)
+<li>My Love #3 (inker) (1950)
+<li>Our Love #2 (inker) (1950)
+<li>The Punisher War Journal #31 (inker) (1991)
+<li>The Punisher War Zone #31-36 (1994-1995)
+<li>Uncanny Tales #28 (1955)
+<li>War Comics #38 (1955)
+<li>Western Outlaws #9 (1955)
+</p><p>
+Collected editions
+</p><p>
+Tarzan: The Joe Kubert Years (Dark Horse Comics)
+
+<li>Volume 1 collects Tarzan (2005)
+<li>Volume 2 collects Tarzan (2006)
+<li>Volume 3 collects Tarzan (2006)
+
+Enemy Ace Archives (DC Comics)
+
+<li>Volume 1 Enemy Ace stories from Our Army at War, Showcase, Star Spangled War Stories (2002)
+<li>Volume 2 Enemy Ace stories from Star-Spangled War Stories (2006)
+
+Hawkman Archives (DC Comics)
+
+<li>Volume 1 includes The Brave and the Bold (2000)
+
+Sgt. Rock Archives (DC Comics)
+
+<li>Volume 1 collects Sgt. Rock stories from G.I. Combat, Our Army at War, (2002)
+<li>Volume 2 collects Sgt. Rock stories from Our Army at War (2003)
+<li>Volume 3 collects Sgt. Rock stories from Our Army at War (2005)
+<li>Volume 4 collects Sgt. Rock stories from Our Army at War (2012)
+
+Tor (DC Comics)
+
+<li>Volume 1  (2001)
+<li>Volume 2  (2002)
+<li>Volume 3  (2004)
+</p><p>
+<li>Wednesday Comics (2010)
+<li>Joe Kubert's Tarzan of the Apes: Artist's Edition (2012)
+<li>Sojourn (1977)
 </p>
 </body>
 </html>
