--- a/index.html
+++ b/index.html
@@ -12775,6 +12775,13 @@
 <td>PC</td>
 <td><a href="One/One.html">Details</a></td>
 </tr>
+<tr>
+
+<td>One</td>
+<td>1985</td>
+<td>Epic</td>
+<td><a href="OneEpic/OneEpic.html">Details</a></td>
+</tr>
 
 <tr>
 <td>One Piece</td>
@@ -13895,6 +13902,13 @@
 <td>1969</td>
 <td>Creator</td>
 <td><a href="RickSealock/RickSealock.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rick Veitch</td>
+<td>1951</td>
+<td>Creator</td>
+<td><a href="RickVeitch/RickVeitch.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16226,6 +16240,13 @@
 <td>2013</td>
 <td>Marvel</td>
 <td><a href="ThorGodOfThunder/ThorGodOfThunder.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Thrasher Comics</td>
+<td>1988</td>
+<td>High Speed Productions</td>
+<td><a href="ThrasherComics/ThrasherComics.html">Details</a></td>
 </tr>
 
 <tr>
