--- a/RareBitFiends/RareBitFiends.html
+++ b/RareBitFiends/RareBitFiends.html
@@ -9,20 +9,8 @@
 
 <body>
 <img src="RareBitFiends1.jpg" title="Rare Bit Fiends"> <br>
-Series: 23 issues 1994 - present<br>
-Publisher: King Hell<br>
+23 issues from 1994 to the present by King Hell
 <p>
-Roarin’ Rick’s Rare Bit Fiends a comic book dream diary, initially funded by his work on the Image Comics title 1963 and self-published as King Hell. This anthology explores the topic of dreaming, and presents stories based on real dreams. 
-</p><p>
-Rick said on his website about this series:<ul>
-"I hope it will offer some sense of where I think all dreams are heading. Or perhaps, more to the point, where they originate.
-</p><p>
-Mercurius is an enigmatic figure at the arcane core of alchemy, being described as both the beginning and end of whatever it was the old alchemists were doing. Most people think of turning lead into gold or Harry Potter style spell casting when they think of alchemists, but I’m here to tell you they were into something else entirely. Swiss psychiatrist Carl Jung was one of the first to see it in our time, but his writings can be very confusing.
-</p><p>
-This new RARE BIT FIENDS material is my attempt to share with readers how I personally came to grips with what Jung and the alchemists (and as it turns out many others) were actually talking about; direct experience of the living heart of nature."
-</ul>
-See the Wikipedia entry <a href="https://en.wikipedia.org/wiki/Anima_mundi">anima mundi</a> for more about the idea of a world soul and cosmic consciousness.
-</p><p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
 </div> </div>
@@ -58,7 +46,17 @@ See the Wikipedia entry <a href="https://en.wikipedia.org/wiki/Anima_mundi">anim
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
-
+<p>
+<a href="../RickVeitch/RickVeitch.html">Rick Veitch</a> Roarin’ Rick’s Rare Bit Fiends a comic book dream diary, initially funded by his work on the Image Comics title 1963 and self-published as King Hell. This anthology explores the topic of dreaming, and presents stories based on real dreams. 
+</p><p>
+Rick said on his website about this series:<ul>
+"I hope it will offer some sense of where I think all dreams are heading. Or perhaps, more to the point, where they originate.
+</p><p>
+Mercurius is an enigmatic figure at the arcane core of alchemy, being described as both the beginning and end of whatever it was the old alchemists were doing. Most people think of turning lead into gold or Harry Potter style spell casting when they think of alchemists, but I’m here to tell you they were into something else entirely. Swiss psychiatrist Carl Jung was one of the first to see it in our time, but his writings can be very confusing.
+</p><p>
+This new RARE BIT FIENDS material is my attempt to share with readers how I personally came to grips with what Jung and the alchemists (and as it turns out many others) were actually talking about; direct experience of the living heart of nature."
+</ul>
+See the Wikipedia entry <a href="https://en.wikipedia.org/wiki/Anima_mundi">anima mundi</a> for more about the idea of a world soul and cosmic consciousness.
 </p>
 </body>
 </html>
