--- a/Vampirella/Vampirella.html
+++ b/Vampirella/Vampirella.html
@@ -9,7 +9,7 @@
 
 <body>
 <img src="Vampirella01.jpg"><br>
-112 issues from 1969 - 1983 by Warren Publishing
+112 issues from 1969 - 1983 by Warren Publishing, 2014 - present by Dynamite
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -29,6 +29,7 @@
 <div class="mySlides" style="text-align: center;"><img src="Vampirella08.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Vampirella09.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Vampirella10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vampirella11.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
