--- a/DanielClowes/DanielClowes.html
+++ b/DanielClowes/DanielClowes.html
@@ -39,6 +39,9 @@
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="DanielClowes20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="DanielClowes23.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -82,9 +85,9 @@ Other appearances
 </ul>
 Movies
 <ul>
-<li>Ghost World (2001)
-<li>Art School Confidential (2006)
-<li>Wilson (2017)
+<li><a href="DanielClowes21.jpg">Ghost World</a> (2001)
+<li><a href="DanielClowes22.jpg">Art School Confidential</a> (2006)
+<li><a href="DanielClowes23.jpg">Wilson</a> (2017)
 </ul>
 
 Miscellaneous
