--- a/ECComics/ECComics.html
+++ b/ECComics/ECComics.html
@@ -19,20 +19,21 @@ In 1954–55, censorship pressures prompted it to concentrate on the humor magaz
 </p><p>
 <b>Titles</b>
 </p><p>
-<li>Aces High  (1955)
-<li>Animal Fables   (1946)
-<li>Animated Comics (1947)
-<li>Blackstone (1947)
-<li>Confessions Illustrated (1956)
-<li>Crime Illustrated  (1955)
-<li>Crime Patrol    (1948)
-<li>Crime SuspenStories (1950) 
-<li>Dandy Comics (1947)
+<li><a href="../Aceshigh/Aceshigh.html">Aces High</a>  (1955)
+<li><a href="../AnimalFables/AnimalFables.html">Animal Fables</a> (1946)
+<li><a href="../AnimatedComics/AnimatedComics.html">Animated Comics</a> (1947)
+<li><a href="../BlackstoneMagician/BlackstoneMagician.html">Blackstone</a> (1947)
+<li><a href="../ConfessionsIllustrated/ConfessionsIllustrated.html">Confessions Illustrated</a> (1956)
+<li><a href="../CrimeIllustrated/CrimeIllustrated.html">Crime Illustrated</a>  (1955)
+<li><a href="../International/International.html">Crime Patrol</a> (1948)
+<li><a href="../CrimeSuspenStories/CrimeSuspenStories.html">Crime SuspenStories</a> (1950) 
+<li><a href="../Dandy/Dandy.html">Dandy Comics</a> (1947)
 <li>Extra! (1955)
-<li>Fat and Slat  (1947)
-<li>Frontline Combat   (1951) 
+<li><a href="../FatAndSlat/FatAndSlat.html">Fat and Slat</a>  (1947)
+<li><a href="../FrontlineCombat/FrontlineCombat.html">Frontline Combat</a> (1951) 
 <li>Gunfighter  (1948)
 <li>Happy Houlihans (1947)
+<li><a href="../HauntOfFear/HauntOfFear.html">Haunt of Fear</a> (1950)
 <li>Impact  (1955) 
 <li>Incredible Science Fiction (1955)
 <li>Land of the Lost  (1946)
