EC Comics update

--- a/ECComics/ECComics.html
+++ b/ECComics/ECComics.html
@@ -8,9 +8,45 @@
 </head>
 
 <body>
-<img src="EC_Logo.jpg"><br>
-EC Comics
+<img src="EC_Logo.jpg">
 <p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="CryptOfTerror17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Extra1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Gunfighter5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HappyHoulihans1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Impact1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LandOfTheLost1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadClassics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadColorClassics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadFollies1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadKids1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MadSpecial1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="MD1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ModernLove1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PictureStories1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Piracy1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Psychoanalysis1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SaddleJustice3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Shock1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Terrorillustrated1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TinyTot1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="3DECClassics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TwoFistedTales18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Valor1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="WarAgainstCrime1.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Entertaining Comics, more commonly known as EC Comics, was an American publisher of comic books, which specialized in horror fiction, crime fiction, satire, military fiction, dark fantasy, and science fiction from the 1940s through the mid-1950s, notably the Tales from the Crypt series. Initially, EC was owned by Maxwell Gaines and specialized in educational and child-oriented stories. After Max Gaines' death in a boating accident in 1947, his son William Gaines took over the company and began to print more mature stories, delving into genres of horror, war, fantasy, science-fiction, adventure, and others. 
 </p><p>
 Noted for their high quality and shock endings, these stories were also unique in their socially conscious, progressive themes (including racial equality, anti-war advocacy, nuclear disarmament, and environmentalism) that anticipated the Civil Rights movement and dawn of 1960s counterculture.
@@ -28,50 +64,44 @@ In 1954–55, censorship pressures prompted it to concentrate on the humor magaz
 <li><a href="../International/International.html">Crime Patrol</a> (1948)
 <li><a href="../CrimeSuspenStories/CrimeSuspenStories.html">Crime SuspenStories</a> (1950) 
 <li><a href="../Dandy/Dandy.html">Dandy Comics</a> (1947)
-<li>Extra! (1955)
+<li><a href="Extra1.jpg">Extra!</a> (1955)
 <li><a href="../FatAndSlat/FatAndSlat.html">Fat and Slat</a>  (1947)
 <li><a href="../FrontlineCombat/FrontlineCombat.html">Frontline Combat</a> (1951) 
-<li>Gunfighter  (1948)
-<li>Happy Houlihans (1947)
+<li><a href="Gunfighter5.jpg">Gunfighter</a>  (1948)
+<li><a href="HappyHoulihans1.jpg">Happy Houlihans</a> (1947)
 <li><a href="../HauntOfFear/HauntOfFear.html">Haunt of Fear</a> (1950)
-<li>Impact  (1955) 
-<li>Incredible Science Fiction (1955)
-<li>Land of the Lost  (1946)
-<li>M.D.(1955)
-<li>Mad (1952)
-<li>Mad Classics (2005)
-<li>Mad Color Classics (2000)
-<li>Mad Follies (1963)
-<li>Mad Kids (2005)
-<li>Mad Special (1970)
-<li>Mad Super Special (1973)
-<li>Mad XL (2000)
-<li>Modern Love (1949)
-<li>Moon Girl   (1947)
-<li>More Trash from Mad (1958) 
-<li>Panic   February–March (1954)
-<li>Picture Stories from American History   (1945)
-<li>Picture Stories from Science  (1947)
-<li>Picture Stories from the Bible (1944)
-<li>Piracy  (1954)
-<li>Psychoanalysis  (1955)
-<li>Saddle Justice  (1948)
-<li>Shock Illustrated  (1955)
-<li>Shock SuspenStories (1952)
-<li>Terror Illustrated (1955)
-<li>The Crypt of Terror (195)
-<li>Tales from the Crypt (1950)
-<li>The Haunt of Fear  (1950)
-<li>The Vault of Horror (1950) 
-<li>Three Dimensional E.C. Classics (1954) 
-<li>Tiny Tot Comics (1946)
-<li>Two-Fisted Tales (1950) 
-<li>Valor  (1955) 
-<li>War Against Crime!  (1948)
-<li>Weird Fantasy  (1950)
-<li>Weird Science  (1950)
-<li>Weird Science-Fantasy  (1954)
-<li>Worst from Mad (1958)
+<li><a href="Impact1.jpg">Impact</a> (1955) 
+<li><a href="../IncredibleSF/IncredibleSF.html">Incredible Science Fiction</a> (1955)
+<li><a href="LandOfTheLost1.jpg">Land of the Lost</a> (1946)
+<li><a href="MD1.jpg">M.D.</a> (1955)
+<li><a href="../Mad/Mad.html">Mad</a> (1952)
+<li><a href="MadClassics1.jpg">Mad Classics</a> (2005)
+<li><a href="MadColorClassics1.jpg">Mad Color Classics</a> (2000)
+<li><a href="MadFollies1.jpg">Mad Follies</a> (1963)
+<li><a href="MadKids1.jpg">Mad Kids</a> (2005)
+<li><a href="MadSpecial1.jpg">Mad Special</a> (1970)
+<li><a href="ModernLove1.jpg">Modern Love</a> (1949)
+<li><a href="../MoonGirl/MoonGirl.html">Moon Girl</a> (1947)
+<li><a href="../Panic/Panic.html">Panic</a> (1954)
+<li><a href="PictureStories1.jpg">Picture Stories from American History</a> (1945)
+<li><a href="Piracy1.jpg">Piracy</a> (1954)
+<li><a href="Psychoanalysis1.jpg">Psychoanalysis</a> (1955)
+<li><a href="SaddleJustice3.jpg">Saddle Justice</a>  (1948)
+<li><a href="Shock1.jpg">Shock Illustrated</a> (1955)
+<li><a href="../ShockSuspenstories/ShockSuspenstories.html">Shock SuspenStories</a> (1952)
+<li><a href="Terrorillustrated1.jpg">Terror Illustrated</a> (1955)
+<li><a href="CryptOfTerror17.jpg">The Crypt of Terror</a> (1950)
+<li><a href="../TalesFromTheCrypt/TalesFromTheCrypt.html">Tales from the Crypt</a> (1950)
+<li><a href="../HauntOfFear/HauntOfFear.html">The Haunt of Fear</a> (1950)
+<li><a href="../VaultOfHorror/VaultOfHorror.html">The Vault of Horror</a> (1950) 
+<li><a href="3DECClassics1.jpg">Three Dimensional E.C. Classics</a> (1954) 
+<li><a href="TinyTot1.jpg">Tiny Tot Comics</a> (1946)
+<li><a href="TwoFistedTales18.jpg">Two-Fisted Tales</a> (1950) 
+<li><a href="Valor1.jpg">Valor</a> (1955) 
+<li><a href="WarAgainstCrime1.jpg">War Against Crime!</a> (1948)
+<li><a href="../WeirdFantasy/WeirdFantasy.html">Weird Fantasy</a> (1950)
+<li><a href="../WeirdScience/WeirdScience.html">Weird Science</a> (1950)
+<li><a href="../WeirdScienceFantasy/WeirdScienceFantasy.html">Weird Science-Fantasy</a> (1954)
 
 </p>
 </body>
