--- a/LegendaryComics/LegendaryComics.html
+++ b/LegendaryComics/LegendaryComics.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>Legendary Comics</h1>
+<img src="ATownCalledDragon1.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,41 +18,63 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="ATownCalledDragon1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Annihilator1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="BlackBag1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="CopsForCriminals1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Epochalypse1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Godzilla1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="GreatWall1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Harvester1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="HolyTerror.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Krampus.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LostInSpace.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PRAftermath.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PRTalesFromTheDrift.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PRTalesFromYearZero.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="RiseAndFallAxiom.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ShadowWalk.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="SkullIslandBirthOfKong.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spectral.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="JonasQuantum.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TowerChronicles1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TowerChronicles2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="TowerChronicles3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Warcraft.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Legendary Comics is an American comic book publisher founded in 2010. The company is owned by Legendary Entertainment, a media company located in Burbank, California. The company publishes both original works and licenses ones based on films produced by Legendary Pictures. Legendary Entertainment first announced the launch of its comic book division, Legendary Comics, in 2010 with the appointment of editor-in-chief Bob Schreck and editor Greg Tumbarello. 
+<a href="http://www.legendary.com/">Legendary Comics</a> is an American comic book publisher founded in 2010. The company is owned by Legendary Entertainment, a media company located in Burbank, California. The company publishes both original works and licenses ones based on films produced by Legendary Pictures. Legendary Entertainment first announced the launch of its comic book division, Legendary Comics, in 2010 with the appointment of editor-in-chief Bob Schreck and editor Greg Tumbarello. 
 </p><p>
 The first graphic novel published by the company was Holy Terror by Frank Miller, which was released in 2011 as the #1 graphic novel and immediately launched the division as a top ten comics publisher. Pacific Rim: Tales from Year Zero was a #1 NY Times Best Seller, Godzilla: Awakening was a NY Times Best Seller, and Annihilator by Grant Morrison &amp; Frazer Irving was nominated for an Eisner Award.
 </p><p>
 Titles
 </p><p>
-<li>A Town Called Dragon (2015)
-<li>Annihilator (2015)
-<li>Black Bag (2016)
-<li>Cops for Criminals (2016)
-<li>Epochalypse (2015)
-<li>Godzilla: Awakening (2014)
-<li>Great Wall: Last Survivor (2017)
-<li>Holy Terror (2011)
-<li>Krampus: Shadow of Saint Nicholas (2015)
-<li>Lost In Space: Countdown to Danger (2018)
-<li>Pacific Rim: Aftermath (2018)
-<li>Pacific Rim: Tales from the Drift (2016)
-<li>Pacific Rim: Tales from Year Zero (2013)
-<li>Rise and Fall of Axiom (2016)
-<li>Shadow Walk (2013)
-<li>Skull Island: Birth of Kong (2017)
-<li>Spectral: Ghosts of War (2017)
-<li>The Infinite Adventures of Jonas Quantum (2016)
-<li>Tower Chronicles Book One: GeistHawk (2013)
-<li>Tower Chronicles: DreadStalker Volume Two (2015)
-<li>Tower Chroniles: DeadStalker Vol 1(2015)
-<li>Trick 'r Treat: Days of the Dead (2015)
-<li>Warcraft: Bonds of Brotherhood (2016)
+<li><a href="ATownCalledDragon1.jpg">A Town Called Dragon</a> (2015)
+<li><a href="Annihilator1.jpg">Annihilator</a> (2015)
+<li><a href="BlackBag1.jpg">Black Bag</a> (2016)
+<li><a href="CopsForCriminals1.jpg">Cops for Criminals</a> (2016)
+<li><a href="Epochalypse1.jpg">Epochalypse</a> (2015)
+<li><a href="Godzilla1.jpg">Godzilla: Awakening</a> (2014)
+<li><a href="GreatWall1.jpg">Great Wall: Last Survivor</a> (2017)
+<li><a href="Harvester1.jpg">The Harvester</a> (2011)
+<li><a href="HolyTerror.jpg">Holy Terror</a> (2011)
+<li><a href="Krampus.jpg">Krampus: Shadow of Saint Nicholas</a> (2015)
+<li><a href="LostInSpace.jpg">Lost In Space: Countdown to Danger</a> (2018)
+<li><a href="PRAftermath.jpg">Pacific Rim: Aftermath</a> (2018)
+<li><a href="PRTalesFromTheDrift.jpg">Pacific Rim: Tales from the Drift</a> (2016)
+<li><a href="PRTalesFromYearZero.jpg">Pacific Rim: Tales from Year Zero</a> (2013)
+<li><a href="RiseAndFallAxiom.jpg">Rise and Fall of Axiom</a> (2016)
+<li><a href="ShadowWalk.jpg">Shadow Walk</a> (2013)
+<li><a href="SkullIslandBirthOfKong.jpg">Skull Island: Birth of Kong</a> (2017)
+<li><a href="Spectral.jpg">Spectral: Ghosts of War</a> (2017)
+<li><a href="JonasQuantum.jpg">The Infinite Adventures of Jonas Quantum</a> (2016)
+<li><a href="TowerChronicles1.jpg">Tower Chronicles Book One: GeistHawk</a> (2013)
+<li><a href="TowerChronicles2.jpg">Tower Chronicles: DreadStalker 1</a> (2015)
+<li><a href="TowerChronicles3.jpg">Tower Chroniles: DeadStalker 2</a>(2015)
+<li><a href="Warcraft.jpg">Warcraft</a> (2016)
 </p>
 
 </body>
