--- a/index.html
+++ b/index.html
@@ -17974,6 +17974,13 @@
 </tr>
 
 <tr>
+<td>Yummy Fur</td>
+<td>1983</td>
+<td>Drawn &amp; Quarterly</td>
+<td><a href="YummyFur/YummyFur.html">Details</a></td>
+</tr>
+
+<tr>
 <td><a name ="z">Zap</td>
 <td>1968</td>
 <td>Apex Novelty</td>
