--- a/WilliamBurroughs/WilliamBurroughs.html
+++ b/WilliamBurroughs/WilliamBurroughs.html
@@ -65,36 +65,29 @@ Burroughs had one child, William S. Burroughs Jr. (1947–1981), with his second
 </p><p>
 Titles
 </p><p>
-<li>Junkie (aka Junky) (1953)
 <li>Queer (1951)
+<li>Junky (1953)
 <li>Naked Lunch (1959)
-<li>The Nova Trilogy (1961-67):
-<ul>
 <li>The Soft Machine (1961) 
-<li>The Ticket That Exploded (1962) 
-<li>Nova Express (1964)
-</ul> 
+<li>The Ticket That Exploded (1962)
 <li>Dead Fingers Talk (1963)
+<li>Nova Express (1964)
 <li>Call Me Burroughs LP (1965)
+<li>Roosevelt After Inauguration and Other Atrocities (1965)
 <li>The Last Words of Dutch Schultz (1969) 
 <li>The Wild Boys: A Book of the Dead (1971) 
 <li>Port of Saints (1973) 
-<li>The Red Night Trilogy (1981-87):
-<ul>
-<li>Cities of the Red Night (1981) 
-<li>The Place of Dead Roads (1983) 
-<li>The Western Lands (1987) 
-</ul>
-<li>My Education: A Book of Dreams (1995) 
-<li>Interzone (written mid-1950s, published 1988)
-<li>Roosevelt After Inauguration and Other Atrocities (1965)
 <li>Exterminator! (1973) 
 <li> Ali's Smile: Naked Scientology (1978)
-<li>Ah Pook is Here, Nova Express, Cities of the Red Night (1981) 
+<li>Cities of the Red Night (1981) 
+<li>Ah Pook is Here (1981) 
+<li>The Place of Dead Roads (1983) 
 <li>The Burroughs File (1984)
 <li>The Adding Machine: Collected Essays (1985) 
-<li>Three Novels - Grove Press omnibus of The Soft Machine, Nova Express and The Wild Boys (1988)
+<li>The Western Lands (1987) 
+<li>Interzone (1988)
 <li>Uncommon Quotes Vol. 1 (1989)
+<li>My Education: A Book of Dreams (1995) 
 <li>Word Virus: The William Burroughs Reader (1998) 
 <li>Conversations with William S. Burroughs (2000) 
 <li>Burroughs Live : The Collected Interviews of William S. Burroughs, 1960-1997 (2000)
