--- a/index.html
+++ b/index.html
@@ -1013,6 +1013,13 @@
 </tr>
 
 <tr>
+<td>Al Hirschfeld</td>
+<td>1903</td>
+<td>Creator</td>
+<td><a href="AlHirschfeld/AlHirschfeld.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Al Williamson</td>
 <td>1931</td>
 <td>Creator</td>
