--- a/index.html
+++ b/index.html
@@ -126,9 +126,24 @@
 </tr>
 
 <tr>
+<td>4 Winds Publishing</td>
+<td>1988</td>
+<td>Publisher</td>
+<td><a href="4WindsPublishing/4WindsPublishing.html">Details</a></td>
+</tr>
+
+<tr>
 <td>5 Ronin</td>
-<td>2011</td><td>Marvel</td>
+<td>2011</td>
+<td>Marvel</td>
 <td><a href="5Ronin/5Ronin.html">Details</a></td>
+</tr>
+
+<tr>
+<td>5-D Comics</td>
+<td>2005</td>
+<td>Publisher</td>
+<td><a href="5DComics/5DComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2923,7 +2938,7 @@
 </tr>
 
 <tr>
-<td>Black Cross Special</td>
+<td>Black Cross</td>
 <td>1988</td>
 <td>Dark Horse</td>
 <td><a href="BlackCross/BlackCross.html">Details</a></td>
@@ -5921,9 +5936,16 @@
 
 <tr>
 <td>Drawn &amp; Quarterly</td>
-<td>2015</td>
+<td>1990</td>
 <td>Publisher</td>
 <td><a href="DrawnQuarterly/DrawnQuarterly.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Drawn &amp; Quarterly Magazine</td>
+<td>1990</td>
+<td>Drawn &amp; Quarterly</td>
+<td><a href="DrawnQuarterlyMag/DrawnQuarterlyMag.html">Details</a></td>
 </tr>
 
 <tr>
