--- a/RickVeitch/RickVeitch.html
+++ b/RickVeitch/RickVeitch.html
@@ -106,7 +106,7 @@ America's Best Comics
 
 Vertigo
 <ul>
-<li>Army@Love
+<li><a href="../ArmyAtLove/ArmyAtLove.html">Army@Love</a> (2007)
 <li>Army@Love Vol. 1: The Hot Zone Club (2007)
 <li>Army@Love vol. 2 (2008)
 <li>Can't Get No graphic novel (writer/artist) (2006)
