--- a/index.html
+++ b/index.html
@@ -3959,6 +3959,13 @@
 </tr>
 
 <tr>
+<td>Chester Brown</td>
+<td>1960</td>
+<td>Creator</td>
+<td><a href="ChesterBrown/ChesterBrown.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cheval Noir</td>
 <td>1989</td>
 <td>Dark Horse</td>
@@ -13090,6 +13097,13 @@
 <td>1955</td>
 <td>Marvel</td>
 <td><a href="DellaVision/DellaVision.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Paul Pope</td>
+<td>1970</td>
+<td>Creator</td>
+<td><a href="PaulPope/PaulPope.html">Details</a></td>
 </tr>
 
 <tr>
