--- a/index.html
+++ b/index.html
@@ -10272,6 +10272,13 @@
 </tr>
 
 <tr>
+<td>Lightning Comics</td>
+<td>1993</td>
+<td>Publisher</td>
+<td><a href="LightningComics/LightningComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Linda Carter, Student Nurse</td>
 <td>1961</td>
 <td>Marvel</td>
