--- a/LightningComics/LightningComics.html
+++ b/LightningComics/LightningComics.html
@@ -19,70 +19,74 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="LightningComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LightningComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LightningComics3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LightningComics4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="LightningComics5.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Lightning comics were founded by Steve and Joseph Zyskowski in the early 90's, not to be confused with Lighting Comics by Ace Magazines from 1940 or the character by DC Comics.
+Lightning comics were founded by Steve and Joseph Zyskowski in the early 90's, not to be confused with Lighting Comics by Ace Magazines from 1940 or the character by DC Comics. For some reason they also used the brand Insomnia Press occasionally.
 </p><p>
 Titles
 </p><p>
-<li>Bloodfire  	1993 	
-<li>Bloodfire / Hellina  	1995
-<li>Catfight  	1995
-<li>Catfight: Dream Into Action  	1996
-<li>Catfight: Dream Warrior  	1995 
-<li>Catfight: Escape from Limbo  	1996 
-<li>Catfight: Sweet Revenge  	1997
-<li>Claire Voyante  	1996
-<li>Creed  	1995 
-<li>Creed  	1995
-<li>Creed/Teenage Mutant Ninja Turtles  	1996
-<li>Creed: Cranial Disorder  	1996 
-<li>Creed: The Good Ship and the New Journey Home  	1997 
-<li>Creed: The Void Collected 	1997 
-<li>Curse of Dreadwolf  	1994 
-<li>DeathAngel  	1997 
-<li>Deathmark  	1994 
-<li>Faith	1997 
-<li>The Four Kunoichi: Bloodlust	1996 
-<li>The Four Kunoichi: Enter The Sinja	1997
-<li>The Fury of Hellina	1995
-<li>Hellina	1994
-<li>Hellina 	1995 
-<li>Hellina / Catfight	1995 
-<li>Hellina / Cynder	1997
-<li>Hellina / Double Impact	1996
-<li>Hellina / Nira X	1996 
-<li>Hellina 1997 Pin-Up Special	1997 
-<li>Hellina: Genesis	1996
-<li>Hellina: Heart of Thorns	1996
-<li>Hellina: Hell's Angel	1996
-<li>Hellina: Hellborn	1997 
-<li>Hellina: In the Flesh	1997 
-<li>Hellina: Kiss of Death	1995 
-<li>Hellina: Naked Desire	1997 
-<li>Hellina: Taking Back the Night	1995 
-<li>Hellina: The Relic 	1997
-<li>Hellina: Wicked Ways 	1995
-<li>Hellina: X-Mas in Hell 	1996 
-<li>Judgment Day	1993 	
-<li>Kunoichi 	1996
-<li>Lightning Comics Presents 	1994 
-<li>Lightning Nude Collection 	1997 
-<li>Moxi 	1996
-<li>Moxi's Friends...Bobby Joe & Nitro 	1996 
-<li>Moxi: Strange Daze	1996 
-<li>Perg 	1993 
-<li>Perry	1997 	
-<li>Serpentina 	1998 
-<li>Sinja: Deadly Sins 	1996 
-<li>Sinja: Resurrection 	1996 	
-<li>Sinthia 	1997 	
-<li>War Party 	1994 
-<li>Wartblade 	1997
-<li>Weezul 	1996
+<li>Bloodfire (1993)
+<li>Bloodfire / Hellin (1995)
+<li>Catfight (1995)
+<li>Catfight: Dream Into Action  (1996)
+<li>Catfight: Dream Warrior  (1995)
+<li>Catfight: Escape from Limbo  (1996)
+<li>Catfight: Sweet Revenge  (1997)
+<li>Claire Voyante  (1996)
+<li>Creed  (1995)
+<li>Creed  (1995)
+<li>Creed/Teenage Mutant Ninja Turtles  (1996)
+<li>Creed: Cranial Disorder     (1996)
+<li>Creed: The Good Ship and the New Journey Home  (1997)
+<li>Creed: The Void Collected (1997)
+<li>Curse of Dreadwolf      (1994)
+<li>DeathAngel      (1997)
+<li>Deathmark   (1994)
+<li>Faith   (1997)
+<li>The Four Kunoichi: Bloodlust    (1996)
+<li>The Four Kunoichi: Enter The Sinja  (1997)
+<li>The Fury of Hellina (1995)
+<li>Hellina (1994)
+<li>Hellina     (1995)
+<li>Hellina / Catfight  (1995)
+<li>Hellina / Cynder    (1997)
+<li>Hellina / Double Impact (1996)
+<li>Hellina / Nira X    (1996)
+<li>Hellina 1997 Pin-Up Special (1997)
+<li>Hellina: Genesis    (1996)
+<li>Hellina: Heart of Thorns    (1996)
+<li>Hellina: Hell's Angel   (1996)
+<li>Hellina: Hellborn   (1997)
+<li>Hellina: In the Flesh   (1997)
+<li>Hellina: Kiss of Death  (1995)
+<li>Hellina: Naked Desire   (1997)
+<li>Hellina: Taking Back the Night  (1995)
+<li>Hellina: The Relic  (1997)
+<li>Hellina: Wicked Ways    (1995)
+<li>Hellina: X-Mas in Hell  (1996)
+<li>Judgment Day    (1993)
+<li>Kunoichi    (1996)
+<li>Lightning Comics Presents   (1994)
+<li>Lightning Nude Collection   (1997)
+<li>Moxi    (1996)
+<li>Moxi's Friends...Bobby Joe &amp; Nitro  (1996)
+<li>Moxi: Strange Daze  (1996)
+<li>Perg    (1993)
+<li>Perry   (1997)
+<li>Serpentina  (1998)
+<li>Sinja: Deadly Sins  (1996)
+<li>Sinja: Resurrection     (1996)
+<li>Sinthia     (1997)
+<li>War Party   (1994)
+<li>Wartblade   (1997)
+<li>Weezul  (1996)
 </p>
 
 </body>
