Chester Brown update

--- a/ChesterBrown/ChesterBrown.html
+++ b/ChesterBrown/ChesterBrown.html
@@ -26,6 +26,12 @@
 <div class="mySlides" style="text-align: center;"><img src="ChesterBrown6.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ChesterBrown7.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="ChesterBrown8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChesterBrown9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChesterBrown10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChesterBrown11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChesterBrown12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChesterBrown13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="ChesterBrown14.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -43,16 +49,16 @@ Titles
 </p><p>
 <li><a href="../YummyFur/YummyFur.html">Yummy Fur</a> (1983)
 <li><a href="../DrawnQuarterlyMag/DrawnQuarterlyMag.html">Drawn and Quarterly</a> (1992) 	
-<li>Underwater 	(1995)
-<li>Louis Riel 	(1999) 	
-<li>Ed the Happy Clown 	(2004)
-<li>The Playboy 	(1992)
-<li>I Never Liked You 	(1994)
-<li>The Little Man: Short Strips	(1998) 	
-<li>I Never Liked You (Second Edition) 	(2002)	
+<li><a href="ChesterBrown9.jpg">Underwater</a> (1995)
+<li><a href="ChesterBrown7.jpg">Louis Riel</a> (1999)
+<li><a href="ChesterBrown10.jpg">Ed the Happy Clown</a> (2004)
+<li><a href="ChesterBrown11.jpg">The Playboy</a> (1992)
+<li><a href="ChesterBrown12.jpg">I Never Liked You</a> (1994)
+<li><a href="ChesterBrown13.jpg">The Little Man: Short Strips</a> (1998)
+<li><a href="ChesterBrown8.jpg">I Never Liked You</a> (Second Edition) (2002)
 <li><a href="../PayingForIt/PayingForIt.html">Paying For It</a> (2011)
-<li>Ed the Happy Clown: A Graphic Novel 	(2012)
-<li>Mary Wept Over the Feet of Jesus 	(2016)
+<li><a href="ChesterBrown6.jpg">Ed the Happy Clown: A Graphic Novel</a> (2012)
+<li><a href="ChesterBrown14.jpg">Mary Wept Over the Feet of Jesus</a> (2016)
 </p>
 
 </body>
