Paul Pope update

--- a/PaulPope/PaulPope.html
+++ b/PaulPope/PaulPope.html
@@ -24,6 +24,9 @@
 <div class="mySlides" style="text-align: center;"><img src="PaulPope4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PaulPope5.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="PaulPope6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PaulPope7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PaulPope8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="PaulPope9.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
