--- a/CalvinAndHobbes/CalvinAndHobbes.html
+++ b/CalvinAndHobbes/CalvinAndHobbes.html
@@ -42,6 +42,28 @@ At the height of its popularity, Calvin and Hobbes was featured in over 2,400 ne
 By April 5, 1987, Watterson was featured in an article in The Los Angeles Times. Calvin and Hobbes earned Watterson the Reuben Award from the National Cartoonists Society in the Outstanding Cartoonist of the Year category, first in 1986 and again in 1988. He was nominated another time in 1992. The Society awarded him the Humor Comic Strip Award for 1988. Calvin and Hobbes has also won several more awards.
 </p><p>
 As his creation grew in popularity, Watterson underwent a long and emotionally draining battle with his syndicate editors over his refusal to license his characters for merchandising. By 1991, Watterson had achieved his goal of securing a new contract that granted him legal control over his creation and all future licensing arrangements. 
+</p><p>
+Titles
+</p><p>
+<li>Calvin and Hobbes (1987)
+<li>Something Under the Bed is Drooling (1988)
+<li>The Essential Calvin and Hobbes (1988)
+<li>Yukon Ho! (1988)
+<li>The Lazy Sunday Book (1989)
+<li>Weirdos from Another Planet (1990)
+<li>The Authoritative Calvin and Hobbes (1990)
+<li>The Revenge of the Baby-Sat (1991)
+<li>Scientific Progress Goes "Boink" (1991)
+<li>Attack of the Deranged Mutant Killer Monster Snow Goons (1992)
+<li>The Indispensable Calvin and Hobbes (1992)
+<li>The Days are Just Packed (1993)
+<li>Homicidal Psycho Jungle Cat: A Calvin and Hobbes Collection (1994)
+<li>The Calvin and Hobbes Tenth Anniversary Book (1995)
+<li>There's Treasure Everywhere (1996)
+<li>It's a Magical World (1996)
+<li>Calvin and Hobbes Sunday Pages 1985-1995 (2002)
+<li>The Complete Calvin and Hobbes (2005)
+<li>The Complete Calvin and Hobbes (2019)
 </p>
 </body>
 </html>
