--- a/index.html
+++ b/index.html
@@ -2839,6 +2839,13 @@
 </tr>
 
 <tr>
+<td>Bill Watterson</td>
+<td>1958</td>
+<td>Creator</td>
+<td><a href="../CalvinAndHobbes/CalvinAndHobbes.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Billi 99</td>
 <td>1991</td>
 <td>Dark Horse</td>
