5th Panel Comics

--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@
 </tr>
 
 <tr>
+<td>5th Panel Comics</td>
+<td>1995</td>
+<td>Publisher</td>
+<td><a href="5thPanelComics/5thPanelComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>5-D Comics</td>
 <td>2005</td>
 <td>Publisher</td>
