a fine line press

--- a/index.html
+++ b/index.html
@@ -420,6 +420,15 @@
 <td><a href="VicAndBlood/VicAndBlood.html">Details</a></td>
 </tr>
 
+
+<tr>
+<td>A Fine Line Press</td>
+<td>1997</td>
+<td>Publisher</td>
+<td><a href="AFineLinePress/AFineLinePress.html">Details</a></td>
+</tr>
+
+
 <tr>
 <td>A+X</td>
 <td>2012</td>
