--- a/index.html
+++ b/index.html
@@ -6912,6 +6912,13 @@
 </tr>
 
 <tr>
+<td>First Salvo</td>
+<td>2007</td>
+<td>Publisher</td>
+<td><a href="FirstSalvoProductions/FirstSalvoProductions.html">Details</a></td>
+</tr>
+
+<tr>
 <td>First Second Books</td>
 <td>2006</td>
 <td>Publisher</td>
