--- a/FoxPublications/FoxPublications.html
+++ b/FoxPublications/FoxPublications.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<h1>Fox Publications</h1>
+<img src="FoxLogo.jpg">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -18,32 +18,45 @@
 <span class="close cursor" onclick="closeModal()">&times;</span>
 <div class="modal-content">
 
-<div class="mySlides" style="text-align: center;"><img src=""></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FoxComics15.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
-Fox Publications, inc. has no relationship to 20th Century Fox, and had years of activity between 1939 to early 1942. They changed their name to Fox Feature Syndicate, Inc. from 1944 to 1951, with "Blue Beetle" being published by Holyoke Publishing Co., Inc. in the interim. 1944 and to a lesser extent 1945 saw a great deal of activity through surrogate publishers, mostly in the form of giant-size (128 or 196 page) issues alongside the return of an actual Fox publishing company.
+Fox Publications, inc. no relation to 20th Century Fox, was founded by Victor S. Fox, from 1939 to 1942. They changed their name to Fox Feature Syndicate, Inc. from 1944 to 1951, with "Blue Beetle" being published by Holyoke Publishing Co., Inc. in the interim. 1944 and to a lesser extent 1945 saw a great deal of activity through surrogate publishers, mostly in the form of giant-size (128 or 196 page) issues alongside the return of an actual Fox publishing company.
 </p><p>
 Titles
 </p><p>
-<li>A Feature Presentation  (1950)
-<li>Album of Crime  (1949)
-<li>Album of Love   (1949)
-<li>All Good Comics (1944)
-<li>All Great Comics    (1944)
-<li>All Great Jungle Adventures (1949)
-<li>All Real Confession Magazine    (1949)
-<li><a href="../AllTop/AllTop.html">All Top Comics</a>  (1944)
-<li>All Your Comics (1944)
-<li>All-Famous Crime Stories    (1949)
-<li>All-Great Confessions   (1949)
-<li>All-Great Crime Stories (1949)
-<li>Almanac of Crime    (1948)
-<li>Animal Crackers (1950)
-<li>Big 3   (1940)
-<li>Blue Beetle (1940)
+<li><a href="FoxComics1.jpg">Album of Crime</a> (1949)
+<li><a href="FoxComics2.jpg">Album of Love</a> (1949)
+<li><a href="FoxComics3.jpg">All Good Comics</a> (1944)
+<li><a href="FoxComics5.jpg">All Great Comics</a> (1944)
+<li><a href="FoxComics6.jpg">All Great Jungle Adventures</a> (1949)
+<li><a href="FoxComics7.jpg">All Real Confession Magazine</a> (1949)
+<li><a href="../AllTop/AllTop.html">All Top Comics</a> (1944)
+<li><a href="FoxComics8.jpg">All Your Comics</a> (1944)
+<li><a href="FoxComics9.jpg">All-Famous Crime Stories</a> (1949)
+<li><a href="FoxComics10.jpg">All-Great Confessions</a> (1949)
+<li><a href="FoxComics11.jpg">All-Great Crime Stories</a> (1949)
+<li><a href="FoxComics12.jpg">Almanac of Crime</a> (1948)
+<li><a href="FoxComics13.jpg">Animal Crackers</a> (1950)
+<li><a href="FoxComics14.jpg">Big 3</a> (1940)
+<li><a href="FoxComics15.jpg">Blue Beetle</a> (1940)
 <li>Book of All-Comics  (1945)
 <li>Book of Comics  (1944)
 <li>Book of Love    (1950)
