--- a/index.html
+++ b/index.html
@@ -420,7 +420,6 @@
 <td><a href="VicAndBlood/VicAndBlood.html">Details</a></td>
 </tr>
 
-
 <tr>
 <td>A Fine Line Press</td>
 <td>1997</td>
@@ -428,6 +427,12 @@
 <td><a href="AFineLinePress/AFineLinePress.html">Details</a></td>
 </tr>
 
+<tr>
+<td>A List Comics</td>
+<td>1997</td>
+<td>Publisher</td>
+<td><a href="AListComics/AListComics.html">Details</a></td>
+</tr>
 
 <tr>
 <td>A+X</td>
