--- a/index.html
+++ b/index.html
@@ -6608,6 +6608,13 @@
 </tr>
 
 <tr>
+<td>Eyeball Kid</td>
+<td>2017</td>
+<td>Dark Horse</td>
+<td><a href="EyeballKid/EyeballKid.html">Details</a></td>
+</tr>
+
+<tr>
 <td><a name ="f">Fables</td>
 <td>2002</td>
 <td>Vertigo</td>
@@ -6935,6 +6942,12 @@
 <td>1985</td>
 <td>Fishwrap</td>
 <td><a href="FishPolice/FishPolice.html">Details</a></td>
+
+<tr>
+<td>Fish Tales Publishing</td>
+<td>1992</td>
+<td>Publishers</td>
+<td><a href="FishTalesPublishing/FishTalesPublishing.html">Details</a></td>
 
 </tr>
 <tr>
